# church-manager-app-lambda-create-post

./: .env.tmpl  .gitignore  README.md  make.sh  publish.sh
.github/workflows/: cd.yml
app/: __init__.py  lambda_function.py  pyproject.toml  requirements.txt
app/src/: create_image.py
app/src/ports/: database_repository.py
app/src/schemas/: input_event_schema.py
app/tests/: test_lambda_function.py
infra/: iam.tf  lambda.tf  main.tf  s3.tf  terraform.tfvars  variables.tf
infra/inventories/dev/: terraform.tfvars
infra/inventories/prod/: terraform.tfvars
