[tool.poetry]
name = "lambdacreatetask"
version = "0.1.0"
description = "Lambda to create tasks in the Life Manager project"
authors = ["MatheusBLopes <matheusblopes10@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.9.16"
aws-lambda-powertools = "^2.13.0"
pydantic = "^1.10.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
