[tool.poetry]
name = "lambdacreatepost"
version = "0.1.0"
description = "Lambda to create posts for church cults"
authors = ["MatheusBLopes <matheusblopes10@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.9.16"
aws-lambda-powertools = "^2.13.0"
pydantic = "^1.10.7"
pytest = "^7.3.1"
jmespath = "^1.0.1"
pymysql = "^1.0.3"
pillow = "^9.5.0"
boto3 = "^1.26.123"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
norecursedirs = [
    "app/test/*",
    "tests/*",
]